--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -16,5 +16,7 @@ jobs:
           distribution: 'adopt'
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
+      - name: Start SUT
+        run: java -jar ./gradle/wrapper/gradle-wrapper.jar & # Имя файла SUT будет отличаться в каждой задаче
       - name: Build with Gradle
         run: ./gradlew test
