--- a/build.gradle
+++ b/build.gradle
@@ -23,3 +23,11 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+jar {
+    manifest {
+        attributes(
+
+                'Main-Class': 'com.javatpoint.AppMain'
+        )
+    }
+}
